# first

./: .gitignore  Car_Ford_Truck_Sedan.java  Employee_Increment.java  Main.java  help.py
Car Truck Ford Sedan/: App.java  Main.java
Employee code/: Main.java
jackofalltrades/: .gitignore  LICENSE.txt  pyproject.toml  setup.py
jackofalltrades/datasets/: london_house_prices.csv
jackofalltrades/jackofalltrades/: __init__.py
jackofalltrades/jackofalltrades/datasets/: dataset.py
jackofalltrades/test/: tests.py
